Bugfix/client balance 0 (#10)
* added db field "telephoneNumber"

* added leading icons to Text fields

* PhoneNumber CRUD

* changed keyboard type for PhoneNumber input field

* unified Account icon, slightly nicer forms

* added sms screen button

* sms screen WIP

* working sms screen

* added localized sms text

* added padding

* fox dates

* SMS sending WIP

* SMS sending WIP

* SMS sending WIP

* working sms sending [WIP]
TODO: UI for permission request

* add SMS to content provider after sending

* sort by days

* removed empty string concatenation

* working permissions (🙏)

* added darker red color for low balance past events

* remove accents from SMS text

* launch permission request after first app start

* changed pastLowBalanceEventColor

* working progressBar

* translations, minor changes

* unused imports

* phoneNumber validation - check if phoneNumber already exists

* fix colors

* save SMS after sending

* fixed MIGRATION_1_2

* working SMS screen

* unused imports

* SMS screen renamed

* added client balance to the TrainingDetailModalWindow.kt

* formattedNumber on ClientDetailEditScreen

* added changelogs

* fix: SMS button is not visible

* TODO resolved

* bug fixed (🙏)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "online.bacovsky.trainingmanagement"
         minSdk 27
         targetSdk 34
-        versionCode 103000
-        versionName "1.3"
+        versionCode 104020
+        versionName "1.4.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -73,7 +73,7 @@ dependencies {
 
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:1.5.4"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0'
 
@@ -106,4 +106,6 @@ dependencies {
     // Icons
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
+    // Permissions
+    implementation "com.google.accompanist:accompanist-permissions:0.32.0"
 }
